--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}div[submit-success] 
         <h1 class="mbr-section-title mbr-fonts-style align-right mbr-bold mbr-white mbr-pt-1 mbr-pb-3 display-1">Victory Bank</h1>
         <h3 class="mbr-section-subtitle mbr-fonts-style align-right mbr-white mbr-light mbr-pt-1 mbr-pb-3 display-5"><em><strong>Where you know your banker and your banker knows you</strong></em></h3>
         
-        <div class="mbr-section-btn align-right"><a class="btn btn-md btn-black display-4" href="index2.php">Service Page</a></div>
+        <div class="mbr-section-btn align-right"><a class="btn btn-md btn-black display-4" href="https://aashsparktask1.000webhostapp.com/index2.php">Service Page</a></div>
     </div>
 
 </section>
